--- a/README.Rmd
+++ b/README.Rmd
@@ -13,15 +13,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-# nbaplotR <a href='https://mrcaseb.github.io/nbaplotR/'><img src='man/figures/logo.png' align="right" width="25%" min-width="120px" /></a>
+# futebolplotR 
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![CRAN status](https://www.r-pkg.org/badges/version/nbaplotR)](https://CRAN.R-project.org/package=nbaplotR)
-[![R-CMD-check](https://github.com/mrcaseb/nbaplotR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/mrcaseb/nbaplotR/actions/workflows/R-CMD-check.yaml)
+[![CRAN status](https://www.r-pkg.org/badges/version/futebolplotR)](https://CRAN.R-project.org/package=futebolplotR)
+
 <!-- badges: end -->
 
-The goal of nbaplotR is to provide functions and geoms that help visualization of NBA/WNBA related analysis. It provides a ggplot2 geom that does the heavy lifting of plotting NBA/WNBA logos in high quality, with correct aspect ratio and possible transparency. All of this is done by the powerful [ggpath package](https://mrcaseb.github.io/ggpath/).
+<!-- The goal of nbaplotR is to provide functions and geoms that help visualization of NBA/WNBA related analysis. It provides a ggplot2 geom that does the heavy lifting of plotting NBA/WNBA logos in high quality, with correct aspect ratio and possible transparency. All of this is done by the powerful [ggpath package](https://mrcaseb.github.io/ggpath/). -->
 
 ## Installation
 
@@ -31,9 +31,9 @@ The goal of nbaplotR is to provide functions and geoms that help visualization o
 <!-- install.packages("nbaplotR") -->
 <!-- ``` -->
 
-To get a bug fix or to use a feature from the development version, you can install the development version of nbaplotR either from [GitHub](https://github.com/mrcaseb/nbaplotR/) with:
+To get a bug fix or to use a feature from the development version, you can install the development version of futebolplotR either from [GitHub](https://github.com/brunomioto/futebolplotR/) with:
 
 ``` r
 if (!require("pak")) install.packages("pak")
-pak::pak("mrcaseb/nbaplotR")
+pak::pak("brunomioto/futebolplotR")
 ```
