update readme and valid_team_names

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+devtools::load_all()
+```
+
 # futebolplotR 
 
 <!-- badges: start -->
@@ -21,11 +26,13 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-<!-- The goal of nbaplotR is to provide functions and geoms that help visualization of NBA/WNBA related analysis. It provides a ggplot2 geom that does the heavy lifting of plotting NBA/WNBA logos in high quality, with correct aspect ratio and possible transparency. All of this is done by the powerful [ggpath package](https://mrcaseb.github.io/ggpath/). -->
+The code for this package was copied **heavily** from [nbaplotR](https://mrcaseb.github.io/nbaplotR/) with minor changes to support Brazilian soccer team logos.
+
+The goal of futebolplotR is to provide functions and geoms that help visualization of Brazilian soccer related analysis. It provides a ggplot2 geom that does the heavy lifting of plotting brazilian soccer logos in high quality, with correct aspect ratio and possible transparency.
 
 ## Installation
 
-<!-- The easiest way to get nbaplotR is to install it from [CRAN](https://cran.r-project.org/package=nbaplotR) with: -->
+<!-- The easiest way to get futeboplotR is to install it from [CRAN](https://cran.r-project.org/package=nbaplotR) with: -->
 
 <!-- ``` r -->
 <!-- install.packages("nbaplotR") -->
@@ -37,3 +44,30 @@ To get a bug fix or to use a feature from the development version, you can insta
 if (!require("pak")) install.packages("pak")
 pak::pak("brunomioto/futebolplotR")
 ```
+
+## Using futebolplotR
+
+The key function in the package is geom_futebol_logo() which will add Brazilian soccer team logos to a ggplot. Here you can see all the current available teams to plot.
+
+```{r, plot, dpi=300, message=FALSE, warning=FALSE}
+library(futebolplotR)
+library(ggplot2)
+
+team <- futebolplotR::valid_team_names()
+team <- team[1:20]
+df <- data.frame(
+  a = rep(1:5, 4),
+  b = sort(rep(1:4, 5), decreasing = TRUE),
+  teams = team
+)
+
+ggplot(df, aes(x = a, y = b)) +
+  geom_futebol_logos(aes(team_abbr = teams), width = 0.1) +
+  geom_label(aes(label = teams), nudge_y = -0.35)+
+  theme_void()+
+  theme(
+    plot.margin = margin(15,15,15,15,"pt")
+  )+
+  coord_cartesian(clip = "off")
+```
+
