team_abbr_mapping bug fix and readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -47,17 +47,17 @@ pak::pak("brunomioto/futebolplotR")
 
 ## Using futebolplotR
 
-The key function in the package is geom_futebol_logo() which will add Brazilian soccer team logos to a ggplot. Here you can see all the current available teams to plot.
+The key function in the package is geom_futebol_logos() which will add Brazilian soccer team logos to a ggplot. Here you can see all the current available teams to plot.
 
-```{r, plot, dpi=300, message=FALSE, warning=FALSE}
-library(futebolplotR)
+```{r, plot, fig.width = 5, fig.height = 10, dpi=300, message=FALSE, warning=FALSE}
+#library(futebolplotR)
 library(ggplot2)
 
-team <- futebolplotR::valid_team_names()
-team <- team[1:20]
+team <- valid_team_names()
+
 df <- data.frame(
-  a = rep(1:5, 4),
-  b = sort(rep(1:4, 5), decreasing = TRUE),
+  a = c(rep(1:5, 8),c(1,2,3)),
+  b = sort(c(rep(1:8, 5), c(0,0,0)), decreasing = TRUE),
   teams = team
 )
 
