--- a/vignettes/articles/futebolplotR.Rmd
+++ b/vignettes/articles/futebolplotR.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Get Started with FutebolplotR"
+title: "Get Started with futebolplotR"
 description:
-author: "Bruno Mioto" "Gabriela Junqueira"
+author: "Bruno Mioto & Gabriela Junqueira"
 ---
 
 ```{r, include = FALSE}
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 
 # Install the Package
 
-The easiest way to get `FutebolplotR` is to install it from with:
+The easiest way to get `futebolplotR` is to install it from with:
 
 ```{r eval = FALSE}
 if (!require("pak")) install.packages("pak")
@@ -26,7 +26,7 @@ pak::pak("brunomioto/futebolplotR")
 
 #> fazer uma intro
 
-```{r setup}
+```{r setup, message=FALSE, warning=FALSE}
 library(futebolplotR)
 library(ggplot2)
 library(dplyr)
@@ -36,21 +36,22 @@ library(brasileirao)
 #> fazer uma intro
 
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 
-team <- futebolplotR::valid_team_names()
-
+br_matches <- brasileirao::matches
 season_2023 <- dplyr::filter(matches, season == 2023)
 season_2023 <- brasileirao::add_variables(season_2023)
 
 season_2023_home <- season_2023 %>%
-    group_by(home) %>%
-    mutate(total_home_points = sum(home_points)) %>%
-    mutate(goal_concede_home = sum(as.numeric(away_score))) %>%
-    mutate(goal_scored_home = sum(as.numeric(home_score))) %>%
+    group_by(home, home_abbr) %>%
+    summarise(total_home_points = sum(home_points),
+           goal_concede_home = sum(as.numeric(away_score)),
+           goal_scored_home = sum(as.numeric(home_score))) %>%
     ungroup() %>%
     slice(1:20) %>%
-    select(home, home_abbr, total_home_points, goal_concede_home, goal_scored_home) %>%
+    select(home, home_abbr, 
+           total_home_points, 
+           goal_concede_home, goal_scored_home) %>%
     rename(fc = home)
 
 season_2023_away <- season_2023 %>%
@@ -60,7 +61,8 @@ season_2023_away <- season_2023 %>%
     mutate(goal_scored_away = sum(as.numeric(away_score))) %>%
     ungroup() %>%
     slice(1:20) %>%
-    select(away, total_away_points, goal_concede_away, goal_scored_away) %>%
+    select(away, total_away_points, 
+           goal_concede_away, goal_scored_away) %>%
     rename(fc = away)
 
 
@@ -71,21 +73,26 @@ df_teams <- left_join(season_2023_home, season_2023_away, by = "fc")
 #> fazer uma intro
 
 ```{r}
-
-ggplot2::ggplot(df_teams, aes(x = total_home_points, y = total_away_points)) +
-  futebolplotR::geom_futebol_badges(aes(team_abbr = home_abbr), width = 0.064, alpha = 0.8) +
-  ggplot2::labs(
+df_teams %>% 
+  ggplot(aes(x = total_home_points, y = total_away_points)) +
+  geom_abline()+
+  geom_futebol_badges(aes(team_abbr = home_abbr),
+                      width = 0.064, alpha = 0.8) +
+  labs(
     x = "Points home",
     y = "Points away",
-    caption = "Data: @brasileirao",
+    caption = "Data: {brasileirao}",
     title = "Campeonato Brasileiro 2023"
   ) +
-  ggplot2::theme_minimal() +
-  ggplot2::theme(
+  theme_minimal() +
+  theme(
     plot.title = element_text(face = "bold"),
     plot.title.position = "plot"
   ) +
-  coord_fixed()
+  coord_fixed(
+    xlim = c(5,45),
+    ylim = c(5,45)
+  )
 
 ```
 
