--- a/vignettes/articles/futebolplotR.Rmd
+++ b/vignettes/articles/futebolplotR.Rmd
@@ -2,6 +2,11 @@
 title: "Get Started with FutebolplotR"
 description:
 author: "Bruno Mioto & Gabriela Junqueira"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Get Started with futebolplotR}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
