--- a/vignettes/articles/futebolplotR.Rmd
+++ b/vignettes/articles/futebolplotR.Rmd
@@ -4,7 +4,6 @@ description:
 author: "Bruno Mioto & Gabriela Junqueira"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Get Started with futebolplotR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -33,8 +32,9 @@ pak::pak("brunomioto/futebolplotR")
 
 ```{r setup}
 library(futebolplotR)
-library(ggplot2)
-library(dplyr)
+# library(ggplot2)
+# library(dplyr)
+library(tidyverse)
 library(brasileirao)
 ```
 
