--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,8 @@ knitr::opts_chunk$set(
 )
 ```
 
-# futebolplotR 
+# **futebolplotR** <img src="man/figures/logo.png" align="right" width="25%" min-width="120px"/>
+
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
@@ -21,18 +22,15 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-<img src="man/figures/logo_futebolplorR.png" alt="package logo with a badges that forms the brazil map" width="250px" align="right"/>
+The goal of **futebolplotR** is to provide functions and geoms that help creating visualization of **Brazilian soccer** related analysis. It provides a ggplot2 geom that does the heavy lifting of plotting Brazilian soccer badges in high quality, with correct aspect ratio and possible transparency.
 
-The code for this package was **heavily** based on [nbaplotR](https://mrcaseb.github.io/nbaplotR/) with minor changes to support Brazilian soccer team badges.
-
-The goal of **futebolplotR** is to provide functions and geoms that help visualization of **Brazilian soccer** related analysis. It provides a ggplot2 geom that does the heavy lifting of plotting brazilian soccer badges in high quality, with correct aspect ratio and possible transparency.
-
-The **futebolplotR** contains badges of the teams participating in the Brasileirão Série A football league from 2003 to the nowadays.
+The **futebolplotR** contains emblems of the teams that have participated in the Brasileirão Série A soccer league from 2003 to the present day. Other teams are also welcome!
 
 This package can be used with data from [brasileirao](https://github.com/williamorim/brasileirao) R package.
 
-## Installation
+The code for this package was **heavily** based on [nbaplotR](https://mrcaseb.github.io/nbaplotR/) with minor changes to support Brazilian soccer team badges.
 
+## Installation
 
 You can install the development version of futebolplotR from [GitHub](https://github.com/brunomioto/futebolplotR/) with:
 
@@ -43,7 +41,7 @@ pak::pak("brunomioto/futebolplotR")
 
 ## Using futebolplotR
 
-The key function in the package is `geom_futebol_badges()` which will add Brazilian soccer team badges to a ggplot. Here you can see all the current available teams (currently 43) to plot.
+The key function in the package is `geom_futebol_badges()` which will add Brazilian soccer team badges to a ggplot. Here you can see all the current available teams (currently 44) to plot.
 
 ```{r, plot, fig.width = 5, fig.height = 10, dpi=300, message=FALSE, warning=FALSE}
 library(futebolplotR)
