--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# **futebolplotR** <a href="https://brunomioto.github.io/futebolplotR/"><img src="man/figures/logo.png" align="right" height="139" alt="futebolplotR website" /></a>
+# **futebolplotR** <a href="https://brunomioto.github.io/futebolplotR/"><img src="man/figures/logo_fu.png" align="right" height="139" alt="futebolplotR website" /></a>
 
 
 <!-- badges: start -->
