--- a/README.Rmd
+++ b/README.Rmd
@@ -70,3 +70,8 @@ ggplot(df, aes(x = a, y = b)) +
   coord_cartesian(clip = "off")
 ```
 
+For more information on using the package, check out our [**Getting Started**](https://brunomioto.github.io/futebolplotR/articles/futebolplotR.html) article
+
+# Credits
+
+This package was created by [Bruno Mioto](https://github.com/brunomioto) and [Gabriela Junqueira](https://github.com/junqueiragaabi). We thank [Sebastian Carl](https://github.com/mrcaseb) for creating the nflplotR and nbaplotR packages, which were fundamental to the development of futebolplotR.
